--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Praktyken</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Hello World
-    Jagoda
+    <header>Hello World!</header>
+    <main>Jagoda</main>
 </body>
 </html>
