--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>Hello World!</header>
+    <header>
+        <h1>Hello World!</h1>
+    </header>
     <main>Jagoda</main>
 </body>
 </html>
