--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <header>
         <h1>Hello World!</h1>
     </header>
-    <main>Jagoda</main>
+    <main>
+        <h2>Jagoda</h2>
+        <li>
+            <ol>Baltyk</ol>
+            <ol>Atlantyk</ol>
+            <ol>Pacyfik</ol>
+        </li>
+
+
+    </main>
 </body>
 </html>
