--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
         <div id="blok1">
             <h1>Batyk tak o</h1>
             <h4>
-            Wciąż rosnące wyspy
+            Wciąż rosnące wyspy<br>
             W niektórych rejonach, np. w Szwecji i Finlandii, w wyniku podnoszenia się lądu po 
             zlodowaceniu pojawiają się nowe wyspy lub łączą się istniejące – ziemia 
             „wypiętrza się” nawet o 8 mm rocznie!
+            </h4><br>
+
+            <h4>Morze prawie słodkowodne<br>
+            Bałtyk ma bardzo niskie zasolenie – w niektórych miejscach woda jest prawie
+            słodka! W Zatoce Botnickiej zasolenie wynosi zaledwie 0,3%,
+             a w Bałtyku Środkowym ok. 0,7% (dla porównania: w Oceanie Atlantyckim – ponad 3%).
             </h4>
 
 
