--- a/index.html
+++ b/index.html
@@ -13,30 +13,39 @@
     </header>
     <main>
         
-        <ol>
-            <li>Baltyk</li>
-            <li>Atlantyk</li>
-            <li>Pacyfik</li>
-        </ol>
+        <aside>
+            <ol>
+                <li><a href="baltyk.html">Baltyk</a></li>
+                <li><a href="atlantyk.html">Atlantyk</a></li>
+                <li><a href="pacyfik.html">Pacyfik</a></li>
+            </ol>
+        </aside>
+
+        <div id="notka">
+            Widoczne nazwy po lewo to tak naprawde potoczne nazwy tych akwenów
+        </div>
 
         <div id="blok1">
             <h1>Batyk tak o</h1>
             <h4>
             Wciąż rosnące wyspy<br>
             W niektórych rejonach, np. w Szwecji i Finlandii, w wyniku podnoszenia się lądu po 
-            zlodowaceniu pojawiają się nowe wyspy lub łączą się istniejące – ziemia 
+            zlodowaceniu pojawiają się nowe wyspy lub łączą się istniejące ziemia 
             „wypiętrza się” nawet o 8 mm rocznie!
-            </h4><br>
+            </h4>
 
             <h4>Morze prawie słodkowodne<br>
-            Bałtyk ma bardzo niskie zasolenie – w niektórych miejscach woda jest prawie
+            Bałtyk ma bardzo niskie zasolenie w niektórych miejscach woda jest prawie
             słodka! W Zatoce Botnickiej zasolenie wynosi zaledwie 0,3%,
-             a w Bałtyku Środkowym ok. 0,7% (dla porównania: w Oceanie Atlantyckim – ponad 3%).
+             a w Bałtyku Środkowym ok. 0,7% (dla porównania: w Oceanie Atlantyckim ponad 3%).
             </h4>
 
 
         </div>
         
     </main>
+    <footer>
+        taka o stronka c:
+    </footer>
 </body>
 </html>
