--- a/index.html
+++ b/index.html
@@ -1,51 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Praktyken</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Hello World!</h1>
-        <h2>Jagoda</h2>
-    </header>
-    <main>
-        
-        <aside>
-            <ol>
-                <li><a href="baltyk.html">Baltyk</a></li>
-                <li><a href="atlantyk.html">Atlantyk</a></li>
-                <li><a href="pacyfik.html">Pacyfik</a></li>
-            </ol>
-        </aside>
-
-        <div id="notka">
-            Widoczne nazwy po lewo to tak naprawde potoczne nazwy tych akwenów
-        </div>
-
-        <div id="blok1">
-            <h1>Batyk tak o</h1>
-            <h4>
-            Wciąż rosnące wyspy<br>
-            W niektórych rejonach, np. w Szwecji i Finlandii, w wyniku podnoszenia się lądu po 
-            zlodowaceniu pojawiają się nowe wyspy lub łączą się istniejące ziemia 
-            „wypiętrza się” nawet o 8 mm rocznie!
-            </h4>
-
-            <h4>Morze prawie słodkowodne<br>
-            Bałtyk ma bardzo niskie zasolenie w niektórych miejscach woda jest prawie
-            słodka! W Zatoce Botnickiej zasolenie wynosi zaledwie 0,3%,
-             a w Bałtyku Środkowym ok. 0,7% (dla porównania: w Oceanie Atlantyckim ponad 3%).
-            </h4>
-
-
-        </div>
-        
-    </main>
-    <footer>
-        taka o stronka c:
-    </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
